<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_music"
        android:checked="true"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/music" />

    <item
        android:id="@+id/i_backup"
        android:icon="@drawable/ic_backup_black_24dp"
        android:title="@string/backup" />
    <!--must set the item title to empty-->
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add_48dp"
        android:title="" />
    <item
        android:id="@+id/i_favor"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favor" />
    <item
        android:id="@+id/i_visibility"
        android:icon="@drawable/ic_visibility_black_24dp"
        android:title="@string/visibility" />
</menu>